# persiantools

./: .appveyor.yml  .codeclimate.yml  .editorconfig  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  Pipfile  README.md  README.rst  appveyor.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  test.yml
persiantools/: __init__.py  characters.py  digits.py  jdatetime.py  numbers.py  utils.py
tests/: test_characters.py  test_digits.py  test_jalalidate.py  test_jalalidatetime.py  test_numbers.py  test_utils.py
